# dinbrief-boilerplate

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  defaults.yml  dinbrief.py  letter.md  pyproject.toml  requirements.txt  setup.py  template.tex
