[tool.poetry]
name = "dinbrief"
version = "0.1.1"
description = "Dinbrief made easy"
authors = ["Markus Quade <info@markusqua.de>"]
include = ["letter.md", "template.tex"]
url= "https://github.com/ohjeah/dinbrief-boilerplate"


[tool.poetry.dependencies]
python = "^3.8"
"delegator.py" = "^0.1.1"
click = "^7.1.1"
pyyaml = "^5.3.1"
click_log = "^0.3.2"
click_default_group = "^1.2.2"
halo = "^0.0.29"
crayons = "^0.3.0"


[tool.poetry.dev-dependencies]


[tool.black]
line-length = 111
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
